# rules_g3log

./: .bazelrc  .clang-format  BUILD.bazel  WORKSPACE
bazel/: repositories.bzl
examples/: simple_main.cpp
src/: log.cpp
src/toylab/: log.hpp
